MNT: Change to h3lioviz for the deploys

--- a/pvw/www/index.html
+++ b/pvw/www/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>Please visit https://enlil.swx-trec.com to access the visualizer.</h1>
+<h1>Please visit https://h3lioviz.swx-trec.com to access the visualizer.</h1>
 
 </body>
 </html>
